manifests/prometheus/prometheus-ingress.yaml
# manifests/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: monitoring.smv.pp.ua
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
  tls:
    - hosts:
        - monitoring.smv.pp.ua
      secretName: monitoring-tls
